# KeyboardProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Sound.cpp  Sound.h  keyboard.cpp  keyboard.h  main  main.cpp
.github/: dependabot.yml
.github/workflows/: scorecard.yml
assets/textFiles/: pianoIndexLetters_BlackKeys.txt  pianoIndexLetters_WhiteKeys.txt  presetMusicNotes.txt
